# oneclickvirt

./: .dockerignore  Dockerfile  Dockerfile.no-db  README.md  README_ZH.md  docker-compose.yaml  install.sh  install_agent.sh  install_full.sh  mcp.json  start.sh
.github/ISSUE_TEMPLATE/: bug-report-en.yml  bug-report-zh.yml  bug-report.yml  feature-request-en.yml  feature-request-zh.yml
.github/workflows/: all-systems-tests.yml  arm-controller-tests.yml  build.yml  build_docker.yml  generate-skills.yml  integration-tests-full-systems.yml  integration-tests.yml  publish-openclaw-skill.yml
action_tests/: README.md  run_env_test.sh  run_module.sh  run_network_mode_test.sh  static_audit.py
action_tests/common/: aliceinit_api.sh  node_manager.sh  platform_config.sh  platform_interface.sh  remote.py  run_env_test.sh  test_common_apis.sh  test_framework.sh  test_provider_apis.sh  test_utils.sh
action_tests/containerd/: run.sh
action_tests/docker/: run.sh
action_tests/incus/: run.sh
action_tests/lxd/: run.sh
action_tests/modules/: 01_init.sh  02_auth.sh  03_users.sh  04_invite_codes.sh  05_redemption.sh  06_announcements.sh  07_system_config.sh  08_system_images.sh  09_providers.sh  10_instances.sh  11_monitoring.sh  12_traffic.sh  13_port_mappings.sh  14_block_rules.sh  15_domains.sh  16_freeze.sh  17_admin_isolation.sh  18_user_features.sh  19_speedtest.sh  20_oauth2.sh  21_kyc.sh  22_checkin.sh  23_discovery.sh  24_data_isolation.sh  25_error_handling.sh  26_instance_types.sh  27_config_advanced.sh  28_instance_ssh_speedtest.sh  29_provider_images.sh  30_provider_agent_mode.sh
action_tests/podman/: run.sh
action_tests/proxmoxve/: run.sh
action_tests/report/: generate_index.sh  generate_report.sh
action_tests/reports/: static-audit.json  static-audit.md
deploy/: default.conf  my.cnf
scripts/: generate_skills.py  install.sh  local.sh  local_install.sh  skill_release_check.sh
server/: Dockerfile  config.yaml  go.mod  go.sum  main.go
server/agent/: .env.example  .gitignore  Cargo.toml  README.md
server/agent/src/: app_state.rs  auth.rs  collector.rs  db.rs  docs.rs  error.rs  fm.rs  handlers.rs  ipt.rs  main.rs  models.rs  nft.rs  proxy.rs  resource.rs  tunnel.rs  ws_client.rs
server/agent/src/nft/: block.rs  counter.rs  gc.rs  mod.rs
server/agent/src/ws_client/: handler.rs  mod.rs  shell.rs  types.rs
skills/: SKILL.md  SKILL_ZH.md
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+808 files in other folders)
