[package]
name = "oneclickvirt-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "oneclickvirt-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
