[package]
name = "oneclickvirt-agent"
version = "0.3.0"
edition = "2026"

[[bin]]
name = "oneclickvirt-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
tower = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
